defmodule Exagon.Bindings.ChannelDef do
  defstruct name: :string, label: :string, description: :string
end
