defmodule Exagon.Bindings.PropertyDef do
  defstruct name: :string, type: :term, label: :string, description: :string
end
